--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ h1 {
     text-align: center;
 }
 
+.video-page {
+    width: 75%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    left: -50%;
+}
+
 video {
     width: 50%;
     height: auto;
