--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,43 @@ h1 {
     left: -50%;
 }
 
-video {
+.video {
     width: 50%;
     height: auto;
     display: block;
     margin: 0 auto;
     /*border: 1px solid #666;*/
 }
+
+h2.video {
+    text-align: center;
+}
+
+/*Contact page information*/
+p.contact {
+    padding: 20px;
+    line-height: 25px;
+    font-size: x-large;
+    font-family: "Times New Roman", Times, serif;
+}
+
+/* these 2 are used for the Stuio page for the images */
+img {
+    border: 1px solid #ddd; /* Gray border */
+    border-radius: 4px; /* Rounded border */
+    padding: 10px; /* Some padding */
+    width: 200px; /* Set a small width */
+}
+
+    img:hover {
+        box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    }
+
+.grow {
+    transition: all .2s ease-in-out;
+}
+
+    .grow:hover {
+        transform: scale(1.1);
+    }
+
