--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     color: #666666;
     background: #3d85c6 none repeat-x scroll top left;
 }
+
 body {
     background: url(https://www.capegynaecologist.co.za/wp-content/uploads/2017/07/top-vid.jpg) no-repeat center center fixed;
     color: blue background-size: cover;
@@ -33,14 +34,15 @@ h2.video {
     text-align: center;
 }
 
-a:active{
-    color:green;
+a:active {
+    color: green;
 }
 
 /*a:visited{
     color:darkred;
 }
 */
+
 a:hover {
     color: red;
 }
@@ -58,11 +60,16 @@ img {
     border: 1px solid #ddd; /* Gray border */
     border-radius: 4px; /* Rounded border */
     padding: 10px; /* Some padding */
-    width: 200px; /* Set a small width */
+    width: 190px; /* Set a small width */
 }
 
     img:hover {
         box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    }
+
+    img.nohover {
+        border: 0;
+        box-shadow: 0 0 0px 0px rgba(0, 140, 186, 0.5);
     }
 
 .grow {
@@ -76,8 +83,19 @@ img {
 
 .year {
     color: red;
-    font-family:'Times New Roman', Times, serif;
-    font-size:larger;
-    font:bolder;
-    
+    font-family: 'Times New Roman', Times, serif;
+    font-size: larger;
+    font: bolder;
+}
+
+span.reviewer{
+    font-family:'Lucida Calligraphy';
+    font-size:20px;
+    font-weight:900;      
+}
+
+p.reviewer{
+    font-family:'Lucida Handwriting';
+    font-size:15px;
+    font-weight:bolder;
 }
