--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,11 @@ a:hover {
 
 /*Contact page information*/
 p.contact {
-    padding: 20px;
-    line-height: 25px;
+    line-height: 15px;
     font-size: x-large;
     font-family: "Times New Roman", Times, serif;
+    margin-left: 15px;
+    margin-top: 15px;
 }
 
 /* these 2 are used for the Stuio page for the images */
